# flakefix

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: cli.py  fixer.py  parser.py  patches.py  rules.py  runner.py
src/fix8/: fixer.py
tests/: test.py
